<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MindeRx</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="assign_to">Assign To</string>
    <string name="unassign_from">Unassign From</string>
    <string name="graph_done">Done</string>
    <string name="pulse">Pulse</string>
    <string name="sao2">SaO2</string>
    <string name="resp">Resp</string>
    <string name="i_o">I/O</string>
    <string name="temp">Tempature</string>
    <string name="temperature">Temperature</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="dummy_date">(ex)12/31/2014</string>
    <string name="dummy_time">9:00 AM</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="o2_stat_lvls">O2 Sat. Levels</string>
    <string name="graph_patient_info">Graph Patient Info</string>
    <string name="title_activity_vitals">PatientInfoActivity</string>
    <string name="title_activity_patient_vitals">PatientVitals</string>
    <string name="title_activity_patient_temperature">PatientTemperatureActivity</string>
    <string name="title_activity_patient_sa_level">PatientSaLevelActivity</string>
    <string name="title_activity_patient_heart_rate">PatientHeartRateActivity</string>
    <string name="title_activity_patient_blood_pressure">PatientBloodPressureActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="heart_rate_num">Heart rate number BPM</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_patient_list">PatientListActivity</string>
    <string name="title_activity_temp_">Temp_Activity</string>
    <string name="hint_txt_password">Pass****</string>
    <string name="hint_txt_username">Username</string>
    <string name="systolic_number">Systolic Number</string>
    <string name="patient_name_placeholder">[Patient Name Here]</string>
    <string name="staff_name_placeholder">[Staff Name Here]</string>
    <string name="diastolic_number">Diastolic Number</string>
    <string name="login_progress_signi">login_progress_signi</string>
    <string name="title_activity_ablank_launcher">ABlankLauncherActivity</string>
    <string name="title_activity_ablank_second_main">ABlankSecondMainActivity</string>
    <string name="password">Password</string>
    <string name="title_activity_graph_patient_info">GraphPatientInfoActivity</string>
    <string name="title_activity_manage_patients">ManagePatientsActivity</string>
    <string name="title_activity_patient_info">PatientInfoActivity</string>
    <string name="title_activity_patient_tempature">PatientTempatureActivity</string>
    <string name="start_date">Start</string>
    <string name="end_date">End</string>
    

</resources>