<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#7e7e7e"
    tools:context="com.example.minderx.GraphPatientInfoActivity" 
    tools:ignore="MergeRootFrame" >
    
    <Button
        android:id="@+id/logout_bn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#3300FF"
        android:text="@string/log_out" />

    <ToggleButton
        android:id="@+id/pulse_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bp_toggle_bn"
        android:layout_alignBottom="@+id/bp_toggle_bn"
        android:layout_centerHorizontal="true"
        android:text="@string/pulse" />

    <ToggleButton
        android:id="@+id/sao2_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pulse_toggle_bn"
        android:layout_alignBottom="@+id/pulse_toggle_bn"
        android:layout_alignLeft="@+id/logout_bn"
        android:text="@string/sao2" />

    <ToggleButton
        android:id="@+id/resp_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/temp_toggle_bn"
        android:layout_alignBottom="@+id/temp_toggle_bn"
        android:layout_toRightOf="@+id/bp_toggle_bn"
        android:text="@string/resp" />

    <ToggleButton
        android:id="@+id/i_o_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resp_toggle_bn"
        android:layout_alignBottom="@+id/resp_toggle_bn"
        android:layout_alignLeft="@+id/sao2_toggle_bn"
        android:text="@string/i_o" />

    <ToggleButton
        android:id="@+id/temp_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bp_toggle_bn"
        android:layout_below="@+id/pulse_toggle_bn"
        android:layout_marginTop="19dp"
        android:text="@string/temp" />

    <ToggleButton
        android:id="@+id/bp_toggle_bn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="126dp"
        android:layout_marginRight="17dp"
        android:layout_toLeftOf="@+id/pulse_toggle_bn"
        android:text="@string/blood_pressure" />

    <EditText
        android:id="@+id/end_date_txt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_date_txt"
        android:layout_alignBottom="@+id/start_date_txt"
        android:layout_alignRight="@+id/sao2_toggle_bn"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/done_bn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/graph_done" />

    <EditText
        android:id="@+id/start_date_txt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bp_toggle_bn"
        android:layout_below="@+id/logout_bn"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/staff_name_label_graph_patient_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logout_bn"
        android:layout_alignBottom="@+id/logout_bn"
        android:layout_toLeftOf="@+id/pulse_toggle_bn"
        android:text="@string/staff_name_placeholder" />

    <TextView
        android:id="@+id/patient_name_label_graph_patient_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_date_txt"
        android:layout_alignLeft="@+id/staff_name_label_graph_patient_info"
        android:text="@string/patient_name_placeholder" />

</RelativeLayout>