<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#7e7e7e"
    tools:context="com.example.minderx.PatientSaLevelActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/submit_bn"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="#3300FF"
        android:text="@string/submit"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Temperature_Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SaO2_Level"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:ems="10"
        android:hint="@string/o2_stat_lvls"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/staff_name_label_sa02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/SaO2_Level"
        android:text="@string/staff_name_placeholder" />

    <TextView
        android:id="@+id/SaO2_Level"
        android:layout_width="75"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name_label_sa02"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:text="@string/sao2"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/patient_name_label_sa02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/staff_name_label_sa02"
        android:layout_below="@+id/staff_name_label_sa02"
        android:text="@string/patient_name_placeholder" />

</RelativeLayout>