<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#7e7e7e" 
    tools:context="com.example.minderx.PatientHeartRateActivity" 
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/submit_bn"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="#3300FF"
        android:text="@string/submit"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Temperature_Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heart_rate_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/heart_rate_num"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/patient_name_label_patient_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/staff_name_label_patient_heart_rate"
        android:layout_marginLeft="16dp"
        android:text="@string/patient_name_placeholder" />

    <TextView
        android:id="@+id/staff_name_label_patient_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_name_label_patient_heart_rate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/staff_name_placeholder" />

    <TextView
        android:id="@+id/heart_rate_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submit_bn"
        android:layout_below="@+id/patient_name_label_patient_heart_rate"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:text="@string/heart_rate"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>