<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7e7e7e"
    tools:context="com.example.minderx.ManagePatientsActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/logout_bn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#3300FF"
        android:text="@string/log_out" />

    <Button
        android:id="@+id/submit_bn"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="#3300FF"
        android:text="@string/submit"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radioOperation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/assignToButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_to" />

        <RadioButton
            android:id="@+id/unassignFromButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unassign_from" />
    </RadioGroup>

    <TextView
        android:id="@+id/staff_name_label_manage_patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logout_bn"
        android:layout_alignBottom="@+id/logout_bn"
        android:layout_alignLeft="@+id/patientsSpinner"
        android:text="@string/staff_name_placeholder" />

    <Spinner
        android:id="@+id/patientsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioOperation"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="41dp" />

    <Spinner
        android:id="@+id/staffSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_bn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp" />

</RelativeLayout>