<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    	<!-- Login form -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

	    <EditText
	        android:id="@+id/username_txt"
	        android:layout_width="216dp"
	        android:layout_height="35dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="128dp"
	        android:background="#eeeeee"
	        android:editable="false"
	        android:ems="10"
	        android:hint="@string/hint_txt_username"
	        android:inputType="textPersonName"
	        android:singleLine="false"
	        android:textColor="#666666" />

	    <EditText
	        android:id="@+id/password_txt"
	        android:layout_width="216dp"
	        android:layout_height="35dp"
	        android:layout_alignLeft="@+id/username_txt"
	        android:layout_below="@+id/username_txt"
	        android:layout_marginTop="29dp"
	        android:background="#eeeeee"
	        android:ems="10"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:singleLine="false"
	        android:textColor="#666666" />

	    <Button
	        android:id="@+id/login_button"
	        android:layout_width="216dp"
	        android:layout_height="35dp"
	        android:layout_alignLeft="@+id/password_txt"
	        android:layout_below="@+id/password_txt"
	        android:layout_marginTop="58dp"
	        android:background="#eeeeee"
	        android:text="@string/submit"
	        android:textColor="#666666"
	        android:textStyle="bold" />

</RelativeLayout>
